--- a/a-tunnel-to-another-place.html
+++ b/a-tunnel-to-another-place.html
@@ -72,7 +72,7 @@
         <header class='col8'>
 
             
-            <img class='image-1' src='../img/image-apolo-cacho-a-tunnel-to-another-place.jpg' />
+            <img class='image-1' src='img/image-apolo-cacho-a-tunnel-to-another-place.jpg' />
             
 
         </header>
@@ -110,12 +110,12 @@
     </div>
 <!-- A TUNNEL TO ANOTHER PLACE by Apolo Cacho IMAGES -->
 <div>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-01.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-02.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-03.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-04.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-05.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
-    <img src="../img/apolo-cacho-a-tunnel-to-another-place-06.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-01.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-02.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-03.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-04.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-05.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
+    <img src='img/apolo-cacho-a-tunnel-to-another-place-06.jpg" alt="A TUNNEL TO ANOTHER PLACE by Apolo Cacho"><br/>
 </div>
 
 <!-- footer script -->
