--- a/ablatio-penis.html
+++ b/ablatio-penis.html
@@ -73,7 +73,7 @@
         <header class='col8'>
 
             
-            <img class='image-1' src='../img/cover-image-will-dinski-ablatio-penis.jpg' />
+            <img class='image-1' src='img/cover-image-will-dinski-ablatio-penis.jpg' />
             
 
         </header>
