--- a/aidan-koch-translations.html
+++ b/aidan-koch-translations.html
@@ -68,7 +68,7 @@
         <header class='col8'>
 
             
-            <img class='image-1' src='../img/cover-image-aidan-koch-translations.jpg' />
+            <img class='image-1' src='img/cover-image-aidan-koch-translations.jpg' />
             
 
         </header>
