--- a/blaise-larmee-sketchbook.html
+++ b/blaise-larmee-sketchbook.html
@@ -76,44 +76,44 @@
 </div>
 
 <div style='background-color:#b2b2b2; ;' class='topm1 center clearfix' alt='Sketchbook by Blaise Larmee'>
-    <img class='poop lazy bot3 topm1' src='../../img/blaise-larmee-sketchbook-00001.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class=' poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00002.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00003.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00004.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00005.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00006.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00007.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00008.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00009.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00010.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00011.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00012.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00038.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00013.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00014.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00015.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00016.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00017.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00018.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00019.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00020.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00021.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00022.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00023.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00024.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00025.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00026.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00027.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00028.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00029.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00035.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00036.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00030.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00031.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00032.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='lazy bot3' src='../../img/blaise-larmee-sketchbook-00033.jpg' width='2200' height='3000' alt='Sketchbook by Blaise Larmee' />
-    <img class='poop lazy bot3' src='../../img/blaise-larmee-sketchbook-00034.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
-    <img class='lazy' src='../../img/blaise-larmee-sketchbook-00037.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3 topm1' src='img/blaise-larmee-sketchbook-00001.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class=' poop lazy bot3' src='img/blaise-larmee-sketchbook-00002.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00003.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00004.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00005.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00006.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00007.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00008.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00009.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00010.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00011.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00012.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00038.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00013.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00014.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00015.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00016.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00017.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00018.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00019.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00020.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00021.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00022.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00023.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00024.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00025.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00026.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00027.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00028.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00029.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00035.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00036.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00030.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00031.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00032.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='lazy bot3' src='img/blaise-larmee-sketchbook-00033.jpg' width='2200' height='3000' alt='Sketchbook by Blaise Larmee' />
+    <img class='poop lazy bot3' src='img/blaise-larmee-sketchbook-00034.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
+    <img class='lazy' src='img/blaise-larmee-sketchbook-00037.jpg' width='2200' height='1500' alt='Sketchbook by Blaise Larmee' />
 
 </div>
 
