--- a/julie-doucet-interview.html
+++ b/julie-doucet-interview.html
@@ -90,7 +90,7 @@
 
 <div style='' class='center topm9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-01.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-01.jpg'/>
 
 </div>
 
@@ -159,7 +159,7 @@
 
 <div style='' class='center topm9 bottom9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-02.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-02.jpg'/>
 
 </div>
 
@@ -211,7 +211,7 @@ It sounds like a living making comics was a lot of work and that maybe you were 
 
 <div style='' class='center topm9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-03.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-03.jpg'/>
 
 </div>
 
@@ -351,7 +351,7 @@ YES, i started to work on a book in english!! it will come out sometime, uh, i d
 
 <div style='' class='center topm9 bottom9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-04.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-04.jpg'/>
 
 </div>
 
@@ -387,7 +387,7 @@ YES, i started to work on a book in english!! it will come out sometime, uh, i d
 
 <div style='' class='center topm9 bottom9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-05.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-05.jpg'/>
 
 </div>
 
@@ -437,7 +437,7 @@ YES, i started to work on a book in english!! it will come out sometime, uh, i d
 
 <div style='' class='center topm9 bottom9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/julie-doucet-interview-06.jpg'/>
+    <img src='img/exclusive-content/julie-doucet-interview-06.jpg'/>
 
 </div>
 
