--- a/leon-sadler-interview.html
+++ b/leon-sadler-interview.html
@@ -93,7 +93,7 @@
         <br/>
         <div class='body col12 clearfix'>
         <!-- image 2 -->
-        <img src="../img/exclusive-content/leon-sadler-conference_room_drawings4.jpg" style="float: left; margin-bottom:3em;" class="clearfix">
+        <img src='img/exclusive-content/leon-sadler-conference_room_drawings4.jpg" style="float: left; margin-bottom:3em;" class="clearfix">
         </div>
         <p class="alt"><a name="noel-freibert"></a>Noel Friebert and CF have nailed it. They've found a way to spend their time making this amazing stuff without any compromise. Like have you seen how Noel's work SCALES up when he does a show in a gallery??? He's got it well sussed out, and he's such a safe and kind person.
         </p><br/><br/><p class="alt quote">
@@ -148,7 +148,7 @@
         <br/>
         <div class='body col12 clearfix'>
         <!-- image 3 -->
-        <img src="../img/exclusive-content/leon-sadler-conference_room_drawings3.jpg" style="float: left; margin-bottom:3em;" style="float: left; margin-bottom:3em;">
+        <img src='img/exclusive-content/leon-sadler-conference_room_drawings3.jpg" style="float: left; margin-bottom:3em;" style="float: left; margin-bottom:3em;">
 </div>
         <p class="alt quote"><a name="angry-birds"></a>
             Do you like the Angry Birds aesthetic?
@@ -173,7 +173,7 @@
 
                 <br/>
         <!-- image 4 -->
-        <img src="../img/exclusive-content/leon-sadler-conference_room_drawings.jpg" style="float: left; margin-bottom:3em;">
+        <img src='img/exclusive-content/leon-sadler-conference_room_drawings.jpg" style="float: left; margin-bottom:3em;">
 </div>
                 <p class="alt"><br/>
         Well ... I'm testing out if I like painting, if it's good to do big paintings. I started last summer to try this out because I was wondering about how to scale drawings, how to make large images that have that same alive energy. I was swimming and trying to think about feelings where I have been really moved, transformed or just felt extremely intense, and I was remembering this roller coaster called 'OBLIVION' where you drop vertically down a hole from very high up. It dangles you over the side, you see down the hole into this terrifying blackness and you like slip forwards a bit in your seat as though you will fall out, and then you just DROP. Thinking about this ride, the experience, and then thinking about the way it was branded (it was all over TV when I was a teenager, the graphic identity and everything for this ride was so highly developed and exciting) I was flooded with inspiration. There is so much symbolic stuff going on with this ride, and the idea of white knuckle rides, a human being attaching themself to a ridiculously violent machine and being thrown around like this!!! God its so cool to think about, I'm inspired again!!! After I got home from the swimming pool I was charged up with this wild inspiration and made 3 really expressive paintings, and that's what I've decided to show. I made a lot of awful paintings last year too, but these three seem to have survived my selection process and now I'm gonna test them in public!! There's something very fun and (i think) human about taking inspiration from this kind of experience, it's relatable, and I think people will be able to understand it without me having to explain. Aaaand ... this is so corny, but the decision to try and start making big paintings was a bit like dangling over the edge, and dropping into the oblivion hole!!
