--- a/margot-ferrick-sketchbook.html
+++ b/margot-ferrick-sketchbook.html
@@ -68,7 +68,7 @@
         <header class='col8'>
 
             
-            <img class='image-1' src='../../img/margot-ferrick-sketchbook-cover.jpg' />
+            <img class='image-1' src='img/margot-ferrick-sketchbook-cover.jpg' />
             
 
         </header>
@@ -99,13 +99,13 @@
 <!-- image 1 -->
 <div style='' class='center '>
     <a href='../../img/large/margot-ferrick-sketchbook-00001.jpg' class='cursor'>
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00001.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00001.jpg' />
     </a>
 </div>
 
 <div style='' class='center '>
     <a href='../../img/large/margot-ferrick-sketchbook-00002.jpg' class='cursor'>
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00002.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00002.jpg' />
     </a>
 
 </div>
@@ -114,7 +114,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00003.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00003.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00003.jpg' />
 
     </a>
 
@@ -124,7 +124,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00004.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00004.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00004.jpg' />
 
     </a>
 
@@ -134,7 +134,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00005.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00005.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00005.jpg' />
 
     </a>
 
@@ -144,7 +144,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00006.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00006.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00006.jpg' />
 
     </a>
 
@@ -154,7 +154,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00007.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00007.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00007.jpg' />
 
     </a>
 
@@ -164,7 +164,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00008.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00008.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00008.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -174,7 +174,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00009.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00009.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00009.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -184,7 +184,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00010.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00010.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00010.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -194,7 +194,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00011.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00011.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00011.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -204,7 +204,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00012.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00012.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00012.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -214,7 +214,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00013.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00013.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00013.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -224,7 +224,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00014.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00014.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00014.jpg' />
 
     </a>
 
@@ -234,7 +234,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00015.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00015.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00015.jpg' />
 
     </a>
 
@@ -244,7 +244,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00016.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00016.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00016.jpg' />
 
     </a>
 
@@ -254,7 +254,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00017.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00017.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00017.jpg' />
 
     </a>
 
@@ -264,7 +264,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00018.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00018.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00018.jpg' />
 
     </a>
 
@@ -274,7 +274,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00019.jpg' class='cursor'>
 
-        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='../../img/margot-ferrick-sketchbook-00019.jpg' />
+        <img class='lazy' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick'  style='' src='img/margot-ferrick-sketchbook-00019.jpg' />
 
     </a>
 
@@ -284,7 +284,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00020.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00020.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00020.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -294,7 +294,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00021.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00021.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00021.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -304,7 +304,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00022.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00022.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00022.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -314,7 +314,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00023.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00023.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00023.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -324,7 +324,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00024.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00024.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00024.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -334,7 +334,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00025.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00025.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00025.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -344,7 +344,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00026.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00026.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00026.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -354,7 +354,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00027.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00027.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00027.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -364,7 +364,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00028.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00028.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00028.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -374,7 +374,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00029.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/margot-ferrick-sketchbook-00029.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style=''  class='lazy' src='img/margot-ferrick-sketchbook-00029.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -384,7 +384,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00030.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00030.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00030.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -394,7 +394,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00031.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00031.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00031.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -405,7 +405,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00032.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00032.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00032.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
@@ -416,7 +416,7 @@
 
     <a href='../../img/large/margot-ferrick-sketchbook-00033.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/margot-ferrick-sketchbook-00033.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
+        <img  style='' class='lazy' src='img/margot-ferrick-sketchbook-00033.jpg' width='2000' height='1333' alt='Sketchbooks by Margot Ferrick' />
 
     </a>
 
