--- a/marinaomi-apology-not-acceptable.html
+++ b/marinaomi-apology-not-acceptable.html
@@ -113,7 +113,7 @@
 
 <div style='' class='center topm9' alt='MariNaomi'>
 
-    <img src='../img/exclusive-content/marinaomi-apology-01.jpg'/>
+    <img src='img/exclusive-content/marinaomi-apology-01.jpg'/>
 
 </div>
 
@@ -139,7 +139,7 @@
 
 <div style='' class='center topm9' alt='MariNaomi'>
 
-    <img src='../img/exclusive-content/marinaomi-apology-02.jpg'/>
+    <img src='img/exclusive-content/marinaomi-apology-02.jpg'/>
 
 </div>
 
@@ -200,7 +200,7 @@ It has been several years since all this went down, and from an outsider’s per
 
 <div style='' class='center topm9' alt='MariNaomi'>
 
-    <img src='../img/exclusive-content/marinaomi-apology-03.jpg'/>
+    <img src='img/exclusive-content/marinaomi-apology-03.jpg'/>
 
 </div>
 
