--- a/meags-fitzgerald-interview.html
+++ b/meags-fitzgerald-interview.html
@@ -90,7 +90,7 @@
 
 <div style='' class='center topm9' alt='Meags Fitzgerald'>
 
-    <img src='../img/exclusive-content/meags-fitzgerald-interview-01.jpg'/>
+    <img src='img/exclusive-content/meags-fitzgerald-interview-01.jpg'/>
 
 </div>
 
@@ -110,7 +110,7 @@
 
         <p class="alt">
 
-            <img src='../img/exclusive-content/meags-fitzgerald-interview-02.jpg'/>
+            <img src='img/exclusive-content/meags-fitzgerald-interview-02.jpg'/>
 
         </p>
 
@@ -186,7 +186,7 @@ Any advice that I would give is advice that I didn’t follow. It’s a very str
 
 <div style='' class='center topm9' alt='Meags Fitzgerald'>
 
-    <img src='../img/exclusive-content/meags-fitzgerald-interview-03.jpg'/>
+    <img src='img/exclusive-content/meags-fitzgerald-interview-03.jpg'/>
 
 </div>
 
@@ -218,7 +218,7 @@ Any advice that I would give is advice that I didn’t follow. It’s a very str
 
 <div style='' class='center topm9' alt='Meags Fitzgerald'>
 
-    <img src='../img/exclusive-content/meags-fitzgerald-interview-04.jpg'/>
+    <img src='img/exclusive-content/meags-fitzgerald-interview-04.jpg'/>
 
 </div>
 
