--- a/new-york-minute.html
+++ b/new-york-minute.html
@@ -78,7 +78,7 @@
         </p>
         <!-- image 1 -->
         <div class='body col12 clearfix'>
-            <img src="../img/exclusive-content/new-york-minute/nick-payne-1.jpg" style="margin-bottom:3em; margin-top:3em;">
+            <img src='img/exclusive-content/new-york-minute/nick-payne-1.jpg" style="margin-bottom:3em; margin-top:3em;">
         </div>
 
         <!-- paragraph 2 -->
@@ -87,7 +87,7 @@
         </p>
         <!-- image 2 -->
         <div class='body col12 clearfix'>
-            <img src="../img/exclusive-content/new-york-minute/nick-payne-2.jpg" style="margin-bottom:3em; margin-top:3em;">
+            <img src='img/exclusive-content/new-york-minute/nick-payne-2.jpg" style="margin-bottom:3em; margin-top:3em;">
         </div>
 
         <!-- paragraph 3 -->
@@ -111,11 +111,11 @@
         </p>
         <!-- image 3 -->
         <div class='body col12 clearfix'>
-            <img src="../img/exclusive-content/new-york-minute/annie-pearlman-1.png" style="margin-top:3em;">
+            <img src='img/exclusive-content/new-york-minute/annie-pearlman-1.png" style="margin-top:3em;">
         </div>
         <!-- image 4 -->
         <div class='body col12 clearfix'>
-            <img src="../img/exclusive-content/new-york-minute/annie-pearlman-2.png" style="margin-bottom:3em; margin-top:3em;">
+            <img src='img/exclusive-content/new-york-minute/annie-pearlman-2.png" style="margin-bottom:3em; margin-top:3em;">
         </div>
 
         <!-- paragraph 5 -->
@@ -138,7 +138,7 @@
         </p>
         <!-- image 5 -->
         <div class='body col12 clearfix' style="margin-bottom:3em; margin-top:3em;">
-            <img src="../img/exclusive-content/new-york-minute/austin-english-around-world-storefront.jpg">
+            <img src='img/exclusive-content/new-york-minute/austin-english-around-world-storefront.jpg">
         </div>
         <!-- paragraph 7 -->
         <p class="alt">
