--- a/paul-peng-sketchbook.html
+++ b/paul-peng-sketchbook.html
@@ -69,7 +69,7 @@
 
             
             <a href='../../img/large/paul-peng-sketchbook-00000.jpg' class='cursor'>
-                <img class='image-1' src='../../img/paul-peng-sketchbook-cover.jpg' />
+                <img class='image-1' src='img/paul-peng-sketchbook-cover.jpg' />
             </a>
             
 
@@ -99,13 +99,13 @@
 
 <div style='' class='center '>
     <a href='../../img/large/paul-peng-sketchbook-00001.jpg' class='cursor'>
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00001.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00001.jpg' />
     </a>
 </div>
 
 <div style='' class='center '>
     <a href='../../img/large/paul-peng-sketchbook-00002.jpg' class='cursor'>
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00002.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00002.jpg' />
     </a>
 </div>
 
@@ -113,7 +113,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00003.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00003.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00003.jpg' />
 
     </a>
 
@@ -123,7 +123,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00004.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00004.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00004.jpg' />
 
     </a>
 
@@ -133,7 +133,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00005.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00005.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00005.jpg' />
 
     </a>
 
@@ -143,7 +143,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00006.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00006.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00006.jpg' />
 
     </a>
 
@@ -153,7 +153,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00007.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00007.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00007.jpg' />
 
     </a>
 
@@ -163,7 +163,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00008.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00008.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00008.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -173,7 +173,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00009.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00009.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00009.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -183,7 +183,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00010.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00010.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00010.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -193,7 +193,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00011.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00011.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00011.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -203,7 +203,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00012.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00012.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00012.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -213,7 +213,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00013.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00013.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00013.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -223,7 +223,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00014.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00014.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00014.jpg' />
 
     </a>
 
@@ -233,7 +233,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00015.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00015.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00015.jpg' />
 
     </a>
 
@@ -243,7 +243,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00016.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00016.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00016.jpg' />
 
     </a>
 
@@ -253,7 +253,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00017.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00017.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00017.jpg' />
 
     </a>
 
@@ -263,7 +263,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00018.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00018.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00018.jpg' />
 
     </a>
 
@@ -273,7 +273,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00019.jpg' class='cursor'>
 
-        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='../../img/paul-peng-sketchbook-00019.jpg' />
+        <img class='lazy' width='2200' height='1467' alt='Sketchbook by Paul Peng'  style='' src='img/paul-peng-sketchbook-00019.jpg' />
 
     </a>
 
@@ -283,7 +283,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00020.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00020.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00020.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -293,7 +293,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00021.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00021.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00021.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -303,7 +303,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00022.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00022.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00022.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -313,7 +313,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00023.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00023.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00023.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -323,7 +323,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00024.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00024.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00024.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -333,7 +333,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00025.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00025.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00025.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -343,7 +343,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00026.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00026.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00026.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -353,7 +353,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00027.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00027.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00027.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -363,7 +363,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00028.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00028.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00028.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -373,7 +373,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00029.jpg' class='cursor'>
 
-        <img  style=''  class='lazy' src='../../img/paul-peng-sketchbook-00029.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style=''  class='lazy' src='img/paul-peng-sketchbook-00029.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -383,7 +383,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00030.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00030.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00030.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
@@ -393,7 +393,7 @@
 
     <a href='../../img/large/paul-peng-sketchbook-00031.jpg' class='cursor'>
 
-        <img  style='' class='lazy' src='../../img/paul-peng-sketchbook-00031.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
+        <img  style='' class='lazy' src='img/paul-peng-sketchbook-00031.jpg' width='2200' height='1467' alt='Sketchbook by Paul Peng' />
 
     </a>
 
