--- a/scott-longo-interview.html
+++ b/scott-longo-interview.html
@@ -73,7 +73,7 @@
 </div>
 
 <div style='' class='center' alt='Sonatina Comics Scott Longo'>
-    <img style='' src='../img/exclusive-content/scott-longo-interview-01.jpg'/>
+    <img style='' src='img/exclusive-content/scott-longo-interview-01.jpg'/>
 </div>
 
 <div class='col12nofloat description topm9'>
