--- a/tcaf-2015.html
+++ b/tcaf-2015.html
@@ -68,7 +68,7 @@
         <header class='col8'>
 
             
-            <img class='image-1' src='../img/cover-image-tcaf-2015.jpg' />
+            <img class='image-1' src='img/cover-image-tcaf-2015.jpg' />
             
 
         </header>
