--- a/zak-sally-interview.html
+++ b/zak-sally-interview.html
@@ -90,7 +90,7 @@
 
 <div style='' class='center topm9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/zak-sally-interview-01.jpg'/>
+    <img src='img/exclusive-content/zak-sally-interview-01.jpg'/>
 
 </div>
 
@@ -766,7 +766,7 @@ It’s like, I know you hustled, but—  <br/><br/>
 
 <div style='' class='center topm9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/zak-sally-interview-03.jpg'/>
+    <img src='img/exclusive-content/zak-sally-interview-03.jpg'/>
 
 </div>
 
@@ -1114,7 +1114,7 @@ You’re like, “Yeah.”
 
 <div style='' class='center topm9' alt='Zak Sally'>
 
-    <img src='../img/exclusive-content/zak-sally-interview-02.jpg'/>
+    <img src='img/exclusive-content/zak-sally-interview-02.jpg'/>
 
 </div>
 
