--- a/a-new-york-story.html
+++ b/a-new-york-story.html
@@ -83,23 +83,23 @@
         </div>
     </div>
     <div class='clearfix' style=' padding:2.6em; margin-top:2.6em;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-25.jpg' style='width:451px;'><br/>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-26.jpg' style='width:696px;'><br/>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-27.jpg' style='width:486px;'><br/>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-28.jpg' style='width:1057px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-29.jpg' style='width:533px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-30.jpg' style='width:569px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-31.jpg' style='width:490px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-32.jpg' style='width:580px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-33.jpg' style='width:766px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-34.jpg' style='width:607px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-35.jpg' style='width:552px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-36.jpg' style='width:867px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-36andahalf.jpg' style='width:473px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-37.jpg' style='width:686px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-38.jpg' style='width:454px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-39.jpg' style='width:428px;'>
-        <img class='austin' src='../img/exclusive-content/new-york-story/austin-english-new-york-story-40.jpg' style='width:683px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-25.jpg' style='width:451px;'><br/>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-26.jpg' style='width:696px;'><br/>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-27.jpg' style='width:486px;'><br/>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-28.jpg' style='width:1057px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-29.jpg' style='width:533px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-30.jpg' style='width:569px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-31.jpg' style='width:490px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-32.jpg' style='width:580px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-33.jpg' style='width:766px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-34.jpg' style='width:607px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-35.jpg' style='width:552px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-36.jpg' style='width:867px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-36andahalf.jpg' style='width:473px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-37.jpg' style='width:686px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-38.jpg' style='width:454px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-39.jpg' style='width:428px;'>
+        <img class='austin' src='img/exclusive-content/new-york-story/austin-english-new-york-story-40.jpg' style='width:683px;'>
     </div>
 </article>
 
