--- a/info.html
+++ b/info.html
@@ -69,7 +69,7 @@
 
                 <a href='/' class='roman c2sc'>
 
-                    <img src='../../img/logo.svg' style='display:inline; margin:0;'>
+                    <img src='img/logo.svg' style='display:inline; margin:0;'>
 
                 </a>
 
