--- a/mike-dawson-interview.html
+++ b/mike-dawson-interview.html
@@ -76,7 +76,7 @@
 
 <div style='' class='center topm9' alt='Mike Dawson'>
 
-        <img src='../img/exclusive-content/mike-dawson-interview-01.jpg'/>
+        <img src='img/exclusive-content/mike-dawson-interview-01.jpg'/>
 
 </div>
 
@@ -119,7 +119,7 @@
 
 <div style='' class='center topm9' alt='Mike Dawson'>
 
-        <img src='../img/exclusive-content/mike-dawson-interview-02.jpg'/>
+        <img src='img/exclusive-content/mike-dawson-interview-02.jpg'/>
 
 </div>
 
@@ -149,7 +149,7 @@
 
 <div style='' class='center topm9' alt='Mike Dawson'>
 
-        <img src='../img/exclusive-content/mike-dawson-interview-03.jpg'/>
+        <img src='img/exclusive-content/mike-dawson-interview-03.jpg'/>
 
 </div>
 
@@ -217,7 +217,7 @@
 
 <div style='' class='center topm9 bottom9' alt='Mike Dawson'>
 
-        <img src='../img/exclusive-content/mike-dawson-interview-04.jpg'/>
+        <img src='img/exclusive-content/mike-dawson-interview-04.jpg'/>
 
 </div>
 
@@ -287,7 +287,7 @@
 
 <div style='' class='center topm9 bottom9' alt='Mike Dawson'>
 
-        <img src='../img/exclusive-content/mike-dawson-interview-05.jpg'/>    
+        <img src='img/exclusive-content/mike-dawson-interview-05.jpg'/>    
 
 </div>
 
