--- a/tommi-parrish-interview.html
+++ b/tommi-parrish-interview.html
@@ -71,7 +71,7 @@
         <div class='col7nofloat pad4h' style="margin-bottom:3.9em;">
           <!-- image 1 -->
             <div style='float:right;'>
-                <img src="../img/exclusive-content/tommi-parrish.png"/>
+                <img src='img/exclusive-content/tommi-parrish.png"/>
             </div>
 
             <p class='alt quote' style='margin-top:2.6em;'>
@@ -94,7 +94,7 @@
     <!-- image 2 -->
     <div style='' class='center clearfix'>
         <a href='../img/exclusive-content/tommi-parrish-sketchbook-2.jpg' class='cursor'>
-            <img style='' src='../img/exclusive-content/tommi-parrish-sketchbook-2.jpg' />
+            <img style='' src='img/exclusive-content/tommi-parrish-sketchbook-2.jpg' />
         </a>
     </div>
 
@@ -132,7 +132,7 @@
     <!-- image 3 -->
     <div style='' class='center clearfix bot3'>
         <a href='../img/exclusive-content/tommi-parrish-sketchbook-1.jpg' class='cursor'>
-            <img style='' src='../img/exclusive-content/tommi-parrish-sketchbook-1.jpg' />
+            <img style='' src='img/exclusive-content/tommi-parrish-sketchbook-1.jpg' />
         </a>
     </div>
 </article>
